Corrections d'alignement sur le footer

--- a/assets/style/layouts/_footer.scss
+++ b/assets/style/layouts/_footer.scss
@@ -38,12 +38,18 @@ footer {
 
 /* Caractères spéciaux pour liens Proposer un restaurant et Devenir partenaire */
 
-.caractere_awesome {
+.caractere_awesome_utensils {
     font-size: 0.8rem;
     color: $white-color;
     padding: 0px 20px 0px 0px;
     margin: 5px 10px 5px 0px;
-    text-align: right;
+}
+
+.caractere_awesome_hands-helping {
+    font-size: 0.8rem;
+    color: $white-color;
+    padding: 0px 15px 0px 0px;
+    margin: 5px 10px 5px 0px;
 }
 
 
