--- a/assets/style/layouts/_general.scss
+++ b/assets/style/layouts/_general.scss
@@ -118,7 +118,7 @@ body {
     position: absolute;
     top: 15px;
     /* Ajustement des choix 1/2/3 par rapport au bouton */
-    left: -30px;
+    left: -25px;
 }
 
 .choix i {
